#31 Add environment variables to SubCreator scripts